Adds rubocop.yml specific to generated code Sets defaults for main rubocop.yml file Refactors Documentation generation to helper module

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,3 +2,35 @@ Layout/EndAlignment:
   AutoCorrect: true
 Style/StringLiterals:
   EnforcedStyle: single_quotes
+Layout/LineLength:
+  Max: 120
+Style/SymbolArray:
+  EnforcedStyle: brackets
+Layout/EmptyLinesAroundAttributeAccessor:
+  Enabled: true
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+Lint/DeprecatedOpenSSLConstant:
+  Enabled: true
+Lint/MixedRegexpCaptureTypes:
+  Enabled: true
+Lint/RaiseException:
+  Enabled: true
+Lint/StructNewOverride:
+  Enabled: true
+Style/ExponentialNotation:
+  Enabled: true
+Style/HashEachMethods:
+  Enabled: true
+Style/HashTransformKeys:
+  Enabled: true
+Style/HashTransformValues:
+  Enabled: true
+Style/RedundantFetchBlock:
+  Enabled: true
+Style/RedundantRegexpCharacterClass:
+  Enabled: true
+Style/RedundantRegexpEscape:
+  Enabled: true
+Style/SlicingWithRange:
+  Enabled: true
