Adds Rubocop rule for Word Arrays

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,8 @@ Layout/LineLength:
   Max: 120
 Style/SymbolArray:
   EnforcedStyle: brackets
+Style/WordArray:
+  EnforcedStyle: brackets
 Layout/EmptyLinesAroundAttributeAccessor:
   Enabled: true
 Layout/SpaceAroundMethodCallOperator:
