--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -38,3 +38,9 @@ Style/RedundantRegexpEscape:
   Enabled: true
 Style/SlicingWithRange:
   Enabled: true
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
+Style/RegexpLiteral:
+  EnforcedStyle: mixed
+  AllowInnerSlashes: true
