--- a/spec/fixtures/vcr/list_permissions.yml
+++ b/spec/fixtures/vcr/list_permissions.yml
@@ -1,13 +1,11 @@
 ---
 http_interactions:
 - request:
-    method: post
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/documents/bulk_create/
+    method: get
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/permissions/
     body:
       encoding: UTF-8
-      string: '[{"id":"4e696e74656e646f203634","url":"https://www.elastic.co/blog/introducing-quick-start-guides-getting-started-with-elastic-enterprise-search-for-free","title":"Getting
-        started with Elastic Enterprise Search for free","body":"this is a test"},{"id":"47616d6520426f7920436f6c6f72","url":"https://www.elastic.co/workplace-search","title":"One-stop
-        answer shop for the virtual workplace","body":"this is also a test"}]'
+      string: "{}"
     headers:
       User-Agent:
       - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
@@ -34,20 +32,20 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Etag:
-      - W/"bb662a3b63c8900e63d18832ae4cb8b7"
+      - W/"189e94e4200a0834bb443b8beb476f0c"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 5cff5021-9c4e-4ed4-9b8c-0a2c7da73641
+      - 9230eb67-020f-4915-b2cb-09343c2c6290
       X-Runtime:
-      - '0.124029'
+      - '0.054235'
       Transfer-Encoding:
       - chunked
       Server:
       - Jetty(9.4.30.v20200611)
     body:
       encoding: UTF-8
-      string: '{"results":[{"id":"4e696e74656e646f203634","errors":[]},{"id":"47616d6520426f7920436f6c6f72","errors":[]}]}'
+      string: '{"meta":{"page":{"current":1,"total_pages":1,"total_results":1,"size":25}},"results":[{"user":"enterprise_search","permissions":[]}]}'
     http_version: 
-  recorded_at: Thu, 17 Sep 2020 18:14:16 GMT
+  recorded_at: Thu, 17 Sep 2020 18:14:15 GMT
 recorded_with: VCR 3.0.3
