--- a/spec/fixtures/vcr/remove_user_permissions.yml
+++ b/spec/fixtures/vcr/remove_user_permissions.yml
@@ -2,12 +2,10 @@
 http_interactions:
 - request:
     method: post
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/documents/bulk_create/
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/permissions/enterprise_search/remove/?user=enterprise_search
     body:
       encoding: UTF-8
-      string: '[{"id":"4e696e74656e646f203634","url":"https://www.elastic.co/blog/introducing-quick-start-guides-getting-started-with-elastic-enterprise-search-for-free","title":"Getting
-        started with Elastic Enterprise Search for free","body":"this is a test"},{"id":"47616d6520426f7920436f6c6f72","url":"https://www.elastic.co/workplace-search","title":"One-stop
-        answer shop for the virtual workplace","body":"this is also a test"}]'
+      string: '{"permissions":["permission1","permission2"]}'
     headers:
       User-Agent:
       - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
@@ -34,20 +32,20 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Etag:
-      - W/"bb662a3b63c8900e63d18832ae4cb8b7"
+      - W/"eaf0aef29a99d5f9dda5844986aa3880"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 5cff5021-9c4e-4ed4-9b8c-0a2c7da73641
+      - bcf519e9-dda7-4341-9453-d66fb7ad066f
       X-Runtime:
-      - '0.124029'
+      - '2.006220'
       Transfer-Encoding:
       - chunked
       Server:
       - Jetty(9.4.30.v20200611)
     body:
       encoding: UTF-8
-      string: '{"results":[{"id":"4e696e74656e646f203634","errors":[]},{"id":"47616d6520426f7920436f6c6f72","errors":[]}]}'
+      string: '{"user":"enterprise_search","permissions":[]}'
     http_version: 
-  recorded_at: Thu, 17 Sep 2020 18:14:16 GMT
+  recorded_at: Thu, 17 Sep 2020 18:14:13 GMT
 recorded_with: VCR 3.0.3
