--- a/spec/fixtures/vcr/clear_user_permissions.yml
+++ b/spec/fixtures/vcr/clear_user_permissions.yml
@@ -2,10 +2,10 @@
 http_interactions:
 - request:
     method: put
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/permissions/enterprise_search/?user=enterprise_search
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/permissions/enterprise_search/?permissions%5B%5D&user=enterprise_search
     body:
       encoding: UTF-8
-      string: '{"permissions":[]}'
+      string: "{}"
     headers:
       User-Agent:
       - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
@@ -36,9 +36,9 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - c47e15b2-b5eb-4245-b6c6-c4a0ae1e914d
+      - 3be4988d-4094-4698-8d9f-8e5a86b3fba9
       X-Runtime:
-      - '2.031516'
+      - '2.718566'
       Transfer-Encoding:
       - chunked
       Server:
@@ -47,5 +47,5 @@ http_interactions:
       encoding: UTF-8
       string: '{"user":"enterprise_search","permissions":[]}'
     http_version: 
-  recorded_at: Thu, 17 Sep 2020 18:14:15 GMT
+  recorded_at: Tue, 03 Nov 2020 23:15:20 GMT
 recorded_with: VCR 3.0.3
