--- a/spec/fixtures/vcr/remove_user_permissions.yml
+++ b/spec/fixtures/vcr/remove_user_permissions.yml
@@ -2,10 +2,10 @@
 http_interactions:
 - request:
     method: post
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/permissions/enterprise_search/remove/?user=enterprise_search
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/permissions/enterprise_search/remove/?permissions%5B%5D=permission1&permissions%5B%5D=permission2&user=enterprise_search
     body:
       encoding: UTF-8
-      string: '{"permissions":["permission1","permission2"]}'
+      string: "{}"
     headers:
       User-Agent:
       - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
@@ -36,9 +36,9 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - bcf519e9-dda7-4341-9453-d66fb7ad066f
+      - 1d0696c0-e60f-45d4-a402-7e67acbd5049
       X-Runtime:
-      - '2.006220'
+      - '1.407605'
       Transfer-Encoding:
       - chunked
       Server:
@@ -47,5 +47,5 @@ http_interactions:
       encoding: UTF-8
       string: '{"user":"enterprise_search","permissions":[]}'
     http_version: 
-  recorded_at: Thu, 17 Sep 2020 18:14:13 GMT
+  recorded_at: Tue, 03 Nov 2020 23:17:47 GMT
 recorded_with: VCR 3.0.3
