--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -7,7 +7,7 @@ jobs:
       ENDPOINT: http://localhost:8080
     strategy:
       matrix:
-        ruby: [ 2.5, 2.6, 2.7 ]
+        ruby: [ 2.5, 2.6, 2.7, 3.0 ]
 
     runs-on: ubuntu-latest
     steps:
