--- a/spec/fixtures/vcr/workplace_search/add_user_permissions.yml
+++ b/spec/fixtures/vcr/workplace_search/add_user_permissions.yml
@@ -2,14 +2,14 @@
 http_interactions:
 - request:
     method: post
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/permissions/enterprise_search/add/?permissions%5B%5D=permission1&permissions%5B%5D=permission2&user=enterprise_search
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_id/permissions/enterprise_search/add/?permissions%5B%5D=permission1&permissions%5B%5D=permission2&user=enterprise_search
     body:
       encoding: UTF-8
       string: "{}"
     headers:
       User-Agent:
-      - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
-        7.9.0)'
+      - 'elastic-enteprise-search-ruby/7.11.0.pre (RUBY_VERSION: 2.7.2; linux x86_64;
+        elasticsearch-transport: 7.10.0)'
       Content-Type:
       - application/json
       Authorization:
@@ -32,20 +32,22 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Etag:
-      - W/"b468c7da0c319e7f5f76f1b107306a23"
+      - W/"b468c7da0c319e7f5f76f1b107306a23--gzip"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - d8232f35-60cc-431a-8c94-cbdb41f362a7
+      - aaf42d03-04a3-4565-abf2-85cacb86fc11
       X-Runtime:
-      - '1.344729'
+      - '1.410221'
+      Vary:
+      - Accept-Encoding, User-Agent
       Transfer-Encoding:
       - chunked
       Server:
-      - Jetty(9.4.30.v20200611)
+      - Jetty(9.4.33.v20201020)
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: '{"user":"enterprise_search","permissions":["permission1","permission2"]}'
     http_version: 
-  recorded_at: Tue, 03 Nov 2020 23:17:24 GMT
+  recorded_at: Wed, 13 Jan 2021 16:01:09 GMT
 recorded_with: VCR 3.0.3
