--- a/spec/fixtures/vcr/workplace_search/clear_user_permissions.yml
+++ b/spec/fixtures/vcr/workplace_search/clear_user_permissions.yml
@@ -2,14 +2,14 @@
 http_interactions:
 - request:
     method: put
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/permissions/enterprise_search/?permissions%5B%5D&user=enterprise_search
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_id/permissions/enterprise_search/?permissions%5B%5D&user=enterprise_search
     body:
       encoding: UTF-8
       string: "{}"
     headers:
       User-Agent:
-      - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
-        7.9.0)'
+      - 'elastic-enteprise-search-ruby/7.11.0.pre (RUBY_VERSION: 2.7.2; linux x86_64;
+        elasticsearch-transport: 7.10.0)'
       Content-Type:
       - application/json
       Authorization:
@@ -32,20 +32,22 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Etag:
-      - W/"eaf0aef29a99d5f9dda5844986aa3880"
+      - W/"eaf0aef29a99d5f9dda5844986aa3880--gzip"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 3be4988d-4094-4698-8d9f-8e5a86b3fba9
+      - 9c5618c5-f2a1-4b8d-b8e5-5c1661e9ac00
       X-Runtime:
-      - '2.718566'
+      - '2.558478'
+      Vary:
+      - Accept-Encoding, User-Agent
       Transfer-Encoding:
       - chunked
       Server:
-      - Jetty(9.4.30.v20200611)
+      - Jetty(9.4.33.v20201020)
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: '{"user":"enterprise_search","permissions":[]}'
     http_version: 
-  recorded_at: Tue, 03 Nov 2020 23:15:20 GMT
+  recorded_at: Wed, 13 Jan 2021 16:00:47 GMT
 recorded_with: VCR 3.0.3
