--- a/spec/fixtures/vcr/workplace_search/delete_documents.yml
+++ b/spec/fixtures/vcr/workplace_search/delete_documents.yml
@@ -2,14 +2,14 @@
 http_interactions:
 - request:
     method: post
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/documents/bulk_destroy/
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_id/documents/bulk_destroy/
     body:
       encoding: UTF-8
       string: '["4e696e74656e646f203634","47616d6520426f7920436f6c6f72"]'
     headers:
       User-Agent:
-      - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
-        7.9.0)'
+      - 'elastic-enteprise-search-ruby/7.11.0.pre (RUBY_VERSION: 2.7.2; linux x86_64;
+        elasticsearch-transport: 7.10.0)'
       Content-Type:
       - application/json
       Authorization:
@@ -32,20 +32,22 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Etag:
-      - W/"d3f060cec02edfb9380e7e345f98112b"
+      - W/"d3f060cec02edfb9380e7e345f98112b--gzip"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 3303955f-9244-420d-9be1-7349d0aa3feb
+      - b26e256a-aafd-49ae-8509-7e30656474b3
       X-Runtime:
-      - '0.185714'
+      - '0.201939'
+      Vary:
+      - Accept-Encoding, User-Agent
       Transfer-Encoding:
       - chunked
       Server:
-      - Jetty(9.4.30.v20200611)
+      - Jetty(9.4.33.v20201020)
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: '{"results":[{"id":"4e696e74656e646f203634","success":true},{"id":"47616d6520426f7920436f6c6f72","success":true}]}'
     http_version: 
-  recorded_at: Tue, 03 Nov 2020 23:12:26 GMT
+  recorded_at: Wed, 13 Jan 2021 15:53:13 GMT
 recorded_with: VCR 3.0.3
