--- a/spec/fixtures/vcr/workplace_search/index_documents.yml
+++ b/spec/fixtures/vcr/workplace_search/index_documents.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/documents/bulk_create/
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_id/documents/bulk_create/
     body:
       encoding: UTF-8
       string: '[{"id":"4e696e74656e646f203634","url":"https://www.elastic.co/blog/introducing-quick-start-guides-getting-started-with-elastic-enterprise-search-for-free","title":"Getting
@@ -10,8 +10,8 @@ http_interactions:
         answer shop for the virtual workplace","body":"this is also a test"}]'
     headers:
       User-Agent:
-      - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
-        7.9.0)'
+      - 'elastic-enteprise-search-ruby/7.11.0.pre (RUBY_VERSION: 2.7.2; linux x86_64;
+        elasticsearch-transport: 7.10.0)'
       Content-Type:
       - application/json
       Authorization:
@@ -34,20 +34,22 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Etag:
-      - W/"bb662a3b63c8900e63d18832ae4cb8b7"
+      - W/"bb662a3b63c8900e63d18832ae4cb8b7--gzip"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 0a62362b-6fca-4190-9ade-3267f6d756a5
+      - e036b163-b15b-4fcf-acff-2ed7f1deebf6
       X-Runtime:
-      - '0.178219'
+      - '0.199726'
+      Vary:
+      - Accept-Encoding, User-Agent
       Transfer-Encoding:
       - chunked
       Server:
-      - Jetty(9.4.30.v20200611)
+      - Jetty(9.4.33.v20201020)
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: '{"results":[{"id":"4e696e74656e646f203634","errors":[]},{"id":"47616d6520426f7920436f6c6f72","errors":[]}]}'
     http_version: 
-  recorded_at: Tue, 03 Nov 2020 23:10:37 GMT
+  recorded_at: Wed, 13 Jan 2021 15:53:13 GMT
 recorded_with: VCR 3.0.3
