--- a/spec/fixtures/vcr/workplace_search/list_external_identities.yml
+++ b/spec/fixtures/vcr/workplace_search/list_external_identities.yml
@@ -2,18 +2,18 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/external_identities/
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_id/external_identities/
     body:
       encoding: UTF-8
       string: "{}"
     headers:
       User-Agent:
-      - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
-        7.9.0)'
+      - 'elastic-enteprise-search-ruby/7.11.0.pre (RUBY_VERSION: 2.7.2; linux x86_64;
+        elasticsearch-transport: 7.10.0)'
       Content-Type:
       - application/json
       Authorization:
-      - Bearer api_key
+      - Bearer access_token
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -32,20 +32,22 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Etag:
-      - W/"eb0b885758fed84e48b67ddcff7a2a49"
+      - W/"eb0b885758fed84e48b67ddcff7a2a49--gzip"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 1de946ac-e94d-413c-9f64-48d5dc9233f2
+      - aa851d6c-5dba-45b0-9cb9-efebffa5adb5
       X-Runtime:
-      - '0.077849'
+      - '0.052190'
+      Vary:
+      - Accept-Encoding, User-Agent
       Transfer-Encoding:
       - chunked
       Server:
-      - Jetty(9.4.30.v20200611)
+      - Jetty(9.4.33.v20201020)
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: '{"meta":{"page":{"current":1,"total_pages":1,"total_results":1,"size":25}},"results":[{"source_user_id":"example@elastic.co","user":"elastic_user"}]}'
     http_version: 
-  recorded_at: Tue, 08 Dec 2020 16:41:00 GMT
+  recorded_at: Wed, 13 Jan 2021 16:04:16 GMT
 recorded_with: VCR 3.0.3
