--- a/spec/fixtures/vcr/workplace_search/list_permissions.yml
+++ b/spec/fixtures/vcr/workplace_search/list_permissions.yml
@@ -2,14 +2,14 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/permissions/
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_id/permissions/
     body:
       encoding: UTF-8
       string: "{}"
     headers:
       User-Agent:
-      - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
-        7.9.0)'
+      - 'elastic-enteprise-search-ruby/7.11.0.pre (RUBY_VERSION: 2.7.2; linux x86_64;
+        elasticsearch-transport: 7.10.0)'
       Content-Type:
       - application/json
       Authorization:
@@ -32,20 +32,22 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Etag:
-      - W/"189e94e4200a0834bb443b8beb476f0c"
+      - W/"189e94e4200a0834bb443b8beb476f0c--gzip"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - fd45fd96-ce2c-46bd-be13-172722153505
+      - dbd2f122-972f-45dc-bb60-c6b321cb76f2
       X-Runtime:
-      - '0.079460'
+      - '0.096305'
+      Vary:
+      - Accept-Encoding, User-Agent
       Transfer-Encoding:
       - chunked
       Server:
-      - Jetty(9.4.30.v20200611)
+      - Jetty(9.4.33.v20201020)
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: '{"meta":{"page":{"current":1,"total_pages":1,"total_results":1,"size":25}},"results":[{"user":"enterprise_search","permissions":[]}]}'
     http_version: 
-  recorded_at: Tue, 03 Nov 2020 23:12:47 GMT
+  recorded_at: Wed, 13 Jan 2021 16:00:19 GMT
 recorded_with: VCR 3.0.3
