--- a/spec/fixtures/vcr/workplace_search/put_external_identity.yml
+++ b/spec/fixtures/vcr/workplace_search/put_external_identity.yml
@@ -2,18 +2,18 @@
 http_interactions:
 - request:
     method: put
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/external_identities/elastic_user/?user=elastic_user
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_id/external_identities/elastic_user/?user=elastic_user
     body:
       encoding: UTF-8
       string: '{"source_user_id":"example2@elastic.co"}'
     headers:
       User-Agent:
-      - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
-        7.9.0)'
+      - 'elastic-enteprise-search-ruby/7.11.0.pre (RUBY_VERSION: 2.7.2; linux x86_64;
+        elasticsearch-transport: 7.10.0)'
       Content-Type:
       - application/json
       Authorization:
-      - Bearer api_key
+      - Bearer access_token
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -32,20 +32,22 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Etag:
-      - W/"e791eae2a9e8158a885dfdc173ed6b02"
+      - W/"e791eae2a9e8158a885dfdc173ed6b02--gzip"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 8d35878c-7d31-4de5-b7eb-711542d34cda
+      - 59340e3c-f447-4fbf-8ada-de73618a8740
       X-Runtime:
-      - '0.154279'
+      - '0.057303'
+      Vary:
+      - Accept-Encoding, User-Agent
       Transfer-Encoding:
       - chunked
       Server:
-      - Jetty(9.4.30.v20200611)
+      - Jetty(9.4.33.v20201020)
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: '{"source_user_id":"example2@elastic.co","user":"elastic_user"}'
     http_version: 
-  recorded_at: Tue, 08 Dec 2020 16:45:09 GMT
+  recorded_at: Wed, 13 Jan 2021 16:04:35 GMT
 recorded_with: VCR 3.0.3
