--- a/spec/fixtures/vcr/workplace_search/put_user_permissions.yml
+++ b/spec/fixtures/vcr/workplace_search/put_user_permissions.yml
@@ -2,14 +2,14 @@
 http_interactions:
 - request:
     method: post
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/permissions/enterprise_search/add/?permissions%5B%5D=more&permissions%5B%5D=permissions&permissions%5B%5D=testing&user=enterprise_search
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_id/permissions/enterprise_search/add/?permissions%5B%5D=more&permissions%5B%5D=permissions&permissions%5B%5D=testing&user=enterprise_search
     body:
       encoding: UTF-8
       string: "{}"
     headers:
       User-Agent:
-      - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
-        7.9.0)'
+      - 'elastic-enteprise-search-ruby/7.11.0.pre (RUBY_VERSION: 2.7.2; linux x86_64;
+        elasticsearch-transport: 7.10.0)'
       Content-Type:
       - application/json
       Authorization:
@@ -32,32 +32,34 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Etag:
-      - W/"d10c028fa9c684778511b469120f4df9"
+      - W/"d10c028fa9c684778511b469120f4df9--gzip"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 62635fa8-edce-4b90-806b-a2544b295d23
+      - 64149045-4d39-402c-8636-bf29f27a974f
       X-Runtime:
-      - '2.435278'
+      - '1.674349'
+      Vary:
+      - Accept-Encoding, User-Agent
       Transfer-Encoding:
       - chunked
       Server:
-      - Jetty(9.4.30.v20200611)
+      - Jetty(9.4.33.v20201020)
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: '{"user":"enterprise_search","permissions":["testing","more","permissions"]}'
     http_version: 
-  recorded_at: Tue, 03 Nov 2020 23:16:55 GMT
+  recorded_at: Wed, 13 Jan 2021 16:00:57 GMT
 - request:
     method: put
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/permissions/enterprise_search/?permissions%5B%5D&user=enterprise_search
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_id/permissions/enterprise_search/?permissions%5B%5D&user=enterprise_search
     body:
       encoding: UTF-8
       string: "{}"
     headers:
       User-Agent:
-      - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
-        7.9.0)'
+      - 'elastic-enteprise-search-ruby/7.11.0.pre (RUBY_VERSION: 2.7.2; linux x86_64;
+        elasticsearch-transport: 7.10.0)'
       Content-Type:
       - application/json
       Authorization:
@@ -80,20 +82,22 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Etag:
-      - W/"eaf0aef29a99d5f9dda5844986aa3880"
+      - W/"eaf0aef29a99d5f9dda5844986aa3880--gzip"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 5e7c7f55-f940-4cb1-9278-5807ecd338d6
+      - 0ec6ac2d-b631-4038-8b89-d855125e48a9
       X-Runtime:
-      - '2.016964'
+      - '1.993345'
+      Vary:
+      - Accept-Encoding, User-Agent
       Transfer-Encoding:
       - chunked
       Server:
-      - Jetty(9.4.30.v20200611)
+      - Jetty(9.4.33.v20201020)
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: '{"user":"enterprise_search","permissions":[]}'
     http_version: 
-  recorded_at: Tue, 03 Nov 2020 23:16:58 GMT
+  recorded_at: Wed, 13 Jan 2021 16:00:59 GMT
 recorded_with: VCR 3.0.3
