--- a/spec/fixtures/vcr/workplace_search/remove_user_permissions.yml
+++ b/spec/fixtures/vcr/workplace_search/remove_user_permissions.yml
@@ -2,14 +2,14 @@
 http_interactions:
 - request:
     method: post
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/permissions/enterprise_search/remove/?permissions%5B%5D=permission1&permissions%5B%5D=permission2&user=enterprise_search
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_id/permissions/enterprise_search/remove/?permissions%5B%5D=permission1&permissions%5B%5D=permission2&user=enterprise_search
     body:
       encoding: UTF-8
       string: "{}"
     headers:
       User-Agent:
-      - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
-        7.9.0)'
+      - 'elastic-enteprise-search-ruby/7.11.0.pre (RUBY_VERSION: 2.7.2; linux x86_64;
+        elasticsearch-transport: 7.10.0)'
       Content-Type:
       - application/json
       Authorization:
@@ -32,20 +32,22 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Etag:
-      - W/"eaf0aef29a99d5f9dda5844986aa3880"
+      - W/"eaf0aef29a99d5f9dda5844986aa3880--gzip"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 1d0696c0-e60f-45d4-a402-7e67acbd5049
+      - 070c6c38-5aca-492e-ad99-046345766c41
       X-Runtime:
-      - '1.407605'
+      - '2.010759'
+      Vary:
+      - Accept-Encoding, User-Agent
       Transfer-Encoding:
       - chunked
       Server:
-      - Jetty(9.4.30.v20200611)
+      - Jetty(9.4.33.v20201020)
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: '{"user":"enterprise_search","permissions":[]}'
     http_version: 
-  recorded_at: Tue, 03 Nov 2020 23:17:47 GMT
+  recorded_at: Wed, 13 Jan 2021 16:01:11 GMT
 recorded_with: VCR 3.0.3
