--- a/spec/fixtures/vcr/workplace_search/retrieve_external_identity.yml
+++ b/spec/fixtures/vcr/workplace_search/retrieve_external_identity.yml
@@ -2,18 +2,18 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/external_identities/elastic_user/?user=elastic_user
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_id/external_identities/elastic_user/?user=elastic_user
     body:
       encoding: UTF-8
       string: "{}"
     headers:
       User-Agent:
-      - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
-        7.9.0)'
+      - 'elastic-enteprise-search-ruby/7.11.0.pre (RUBY_VERSION: 2.7.2; linux x86_64;
+        elasticsearch-transport: 7.10.0)'
       Content-Type:
       - application/json
       Authorization:
-      - Bearer api_key
+      - Bearer access_token
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -32,20 +32,22 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Etag:
-      - W/"58321c212599891b518fb2bac5efb797"
+      - W/"58321c212599891b518fb2bac5efb797--gzip"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 5f5c289b-2d5c-419d-a312-6b506151ada7
+      - 68f9b489-9502-4e20-becc-a7f57ba8f7d5
       X-Runtime:
-      - '0.078137'
+      - '0.047753'
+      Vary:
+      - Accept-Encoding, User-Agent
       Transfer-Encoding:
       - chunked
       Server:
-      - Jetty(9.4.30.v20200611)
+      - Jetty(9.4.33.v20201020)
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: '{"source_user_id":"example@elastic.co","user":"elastic_user"}'
     http_version: 
-  recorded_at: Tue, 08 Dec 2020 16:40:40 GMT
+  recorded_at: Wed, 13 Jan 2021 16:01:57 GMT
 recorded_with: VCR 3.0.3
