--- a/spec/fixtures/vcr/workplace_search/user_permissions_empty.yml
+++ b/spec/fixtures/vcr/workplace_search/user_permissions_empty.yml
@@ -2,14 +2,14 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3002/api/ws/v1/sources/content_source_key/permissions/enterprise_search/?user=enterprise_search
+    uri: http://localhost:3002/api/ws/v1/sources/content_source_id/permissions/enterprise_search/?user=enterprise_search
     body:
       encoding: UTF-8
       string: "{}"
     headers:
       User-Agent:
-      - 'elastic-enteprise-search-ruby/0.0.1 (RUBY_VERSION: 2.7.1; linux x86_64; elasticsearch-transport:
-        7.9.0)'
+      - 'elastic-enteprise-search-ruby/7.11.0.pre (RUBY_VERSION: 2.7.2; linux x86_64;
+        elasticsearch-transport: 7.10.0)'
       Content-Type:
       - application/json
       Authorization:
@@ -32,20 +32,22 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Etag:
-      - W/"eaf0aef29a99d5f9dda5844986aa3880"
+      - W/"eaf0aef29a99d5f9dda5844986aa3880--gzip"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - fe4e4e34-d5c6-43ac-aae6-6f47a4e4c28d
+      - ea185891-850b-499f-83b8-9ab960432ceb
       X-Runtime:
-      - '0.063630'
+      - '0.057762'
+      Vary:
+      - Accept-Encoding, User-Agent
       Transfer-Encoding:
       - chunked
       Server:
-      - Jetty(9.4.30.v20200611)
+      - Jetty(9.4.33.v20201020)
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: '{"user":"enterprise_search","permissions":[]}'
     http_version: 
-  recorded_at: Tue, 03 Nov 2020 23:15:20 GMT
+  recorded_at: Wed, 13 Jan 2021 16:00:47 GMT
 recorded_with: VCR 3.0.3
