--- a/spec/fixtures/vcr/app_search/list_synonym_sets.yml
+++ b/spec/fixtures/vcr/app_search/list_synonym_sets.yml
@@ -13,7 +13,7 @@ http_interactions:
       Content-Type:
       - application/json
       Authorization:
-      - Bearer private-qrvuvmq5561ouie4i251pau9
+      - Bearer api_key
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
