--- a/.ci/jobs/elastic+enterprise-search-ruby+main.yml
+++ b/.ci/jobs/elastic+enterprise-search-ruby+main.yml
@@ -1,12 +1,12 @@
 ---
 - job:
-    name: elastic+enterprise-search-ruby+master
-    display-name: 'elastic / enterprise-search-ruby # master'
-    description: Testing the enterprise-search-ruby master branch.
+    name: elastic+enterprise-search-ruby+main
+    display-name: 'elastic / enterprise-search-ruby # main'
+    description: Testing the enterprise-search-ruby main branch.
     junit_results: "*-junit.xml"
     parameters:
     - string:
         name: branch_specifier
-        default: refs/heads/master
+        default: refs/heads/main
         description: the Git branch specifier to build (&lt;branchName&gt;, &lt;tagName&gt;,
           &lt;commitId&gt;, etc.)
