[CI] Refactors integration testing in Jenkins

--- a/.ci/jobs/defaults.yml
+++ b/.ci/jobs/defaults.yml
@@ -46,6 +46,10 @@
         type: yaml
         filename: .ci/test-matrix.yml
         name: RUBY_VERSION
+    - axis:
+        type: yaml
+        filename: .ci/test-matrix.yml
+        name: SERVICE
     yaml-strategy:
       exclude-key: exclude
       filename: .ci/test-matrix.yml
