--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -7,7 +7,7 @@ jobs:
       ENDPOINT: http://localhost:8080
     strategy:
       matrix:
-        ruby: [ 2.5, 2.6, 2.7, 3.0 ]
+        ruby: [ '2.7', '3.0', '3.1' ]
 
     runs-on: ubuntu-latest
     steps:
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [ jruby-9.2 ]
+        ruby: [ jruby-9.3 ]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
