--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -11,6 +11,5 @@ jobs:
         ruby-version: 2.7
     - name: Run Rubocop
       run: |
-        sudo apt-get install libcurl4-openssl-dev
-        bundle install
-        bundle exec rubocop
+        gem install rubocop
+        rubocop
