--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -16,6 +16,7 @@ jobs:
         ruby-version: ${{ matrix.ruby }}
     - name: Build and test with Rake
       run: |
+        sudo apt-get update
         sudo apt-get install libcurl4-openssl-dev
         ruby -v
         bundle install
