--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [ jruby-9.3 ]
+        ruby: [ jruby-9.3, jruby-9.4 ]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
