--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,10 +1,9 @@
 steps:
-  - label: ":elastic-enterprise-search: Enterprise Search :rspec: {{ matrix.service }} :ruby: v{{ matrix.ruby }}"
+  - label: ":elastic-enterprise-search: Enterprise Search :rspec: API Integration Tests :ruby: v{{ matrix.ruby }}"
     agents:
       provider: "gcp"
     env:
       RUBY_VERSION: "{{ matrix.ruby }}"
-      SERVICE: "{{ matrix.service }}"
       STACK_VERSION: 7.17-SNAPSHOT
     matrix:
       setup:
@@ -13,10 +12,6 @@ steps:
           - "3.1"
           - "3.0"
           - "2.7"
-        service:
-          - enterprisesearch
-          - appsearch
-          - workplacesearch
     command: ./.buildkite/run-tests.sh
     artifact_paths: "tmp/*"
   - wait: ~
