--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,5 +1,5 @@
 name: 7.x
-on: [push, pull_request]
+on: [push]
 
 jobs:
   test-ruby:
@@ -18,6 +18,7 @@ jobs:
     - name: Build and test with Rake
       run: |
         ruby -v
+        sudo apt-get install libcurl4-openssl-dev
         bundle install
         bundle exec rake spec:client
   test-jruby:
